# agentic-ai-bootcamp

./: README.md  main.py  pyproject.toml  requirements.txt
AgenticChatBot/: pyproject.toml
AgenticChatBot/src/langgraphAgenticAI/: main.py
AgenticChatBot/src/langgraphAgenticAI/graph/: graph_builder.py
AgenticChatBot/src/langgraphAgenticAI/state/: state.py
AgenticChatBot/src/langgraphAgenticAI/tools/: web_search_tool.py
AgenticChatBot/src/langgraphAgenticAI/ui/: uiconfig.ini  uiconfigfile.py
AgenticChatBot/src/langgraphAgenticAI/ui/streamlitui/: display_result.py  load_ui.py
Debugging/: openai_agent.py
Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
End to End Projects/AgenticChatBot/: app.py  pyproject.toml
End to End Projects/AgenticChatBot/AINews/: daily_summary.md  monthly_summary.md  weekly_summary.md
End to End Projects/AgenticChatBot/src/langgraphAgenticAI/: main.py
End to End Projects/AgenticChatBot/src/langgraphAgenticAI/LLMs/: groqllm.py
End to End Projects/AgenticChatBot/src/langgraphAgenticAI/graph/: graph_builder.py
End to End Projects/AgenticChatBot/src/langgraphAgenticAI/nodes/: ai_news_node.py  basic_chatbot_node.py  chatbot_with_tools_node.py
End to End Projects/AgenticChatBot/src/langgraphAgenticAI/ui/: uiconfig.ini
End to End Projects/AgenticChatBot/src/langgraphAgenticAI/ui/streamlitui/: load_ui.py
End to End Projects/BlogAgentic/: langgraph.json  pyproject.toml  requirements.txt  template.py
End to End Projects/BlogAgentic/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
End to End Projects/BlogAgentic/src/: app.py
End to End Projects/BlogAgentic/src/graphs/: graphbuilder.py
End to End Projects/BlogAgentic/src/llms/: groqllm.py
End to End Projects/BlogAgentic/src/nodes/: blog_node.py
End to End Projects/BlogAgentic/src/states/: blog_state.py
Human in The Loop/: 1-HumanintheLoop.ipynb
LangGraph Advanced/: 1-streaming.ipynb
LangGraph Components/: 1-DataclassStateSchema.ipynb  2-Pydantic.ipynb  3-ChainsLangGraph.ipynb  4-ChatBotwithMultipleTools.ipynb  5-ReactAgentArchitecture.ipynb
MCP Langchain/: client.py  mathserver.py  pyproject.toml  weather.py
RAG/: 1-AgenticRAG.ipynb  2-CorrectiveRAG.ipynb  3-AdaptiveRAG.ipynb
Workflows/: 1-PromptChaining.ipynb  2-Parallelization.ipynb  3-Routing.ipynb  4-Orchestrator-worker.ipynb  5-Evaluator-Optimizer.ipynb
