[project]
name = "agentic-ai-course-udemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.0",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.2",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "python-dotenv>=1.2.1",
    "typing-extensions>=4.15.0",
    "wikipedia>=1.4.0",
]

