[project]
name = "agentic-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "amulyaprasanth",email = "amulyaprasanth301@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "langchain (>=1.0.5,<2.0.0)",
    "langgraph (>=1.0.2,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-core (>=1.0.4,<2.0.0)",
    "langchain-groq (>=1.0.0,<2.0.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "langchain-tavily (>=0.2.13,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
